submitting week 3 personal assignment - shopping cart

--- a/web/style.css
+++ b/web/style.css
@@ -2,8 +2,10 @@
 Color theme:
 #E27D60 - reddish/rust
 #085DCB - blue
+#aec6cf - pastel blue
 #E8A87C - orange/tan
 #C28D9E - purple-ish
+#d1adb8 - lighter purple-ish
 #41B3A3 - dark turqoise
 */
 
