--- a/web/website/style.css
+++ b/web/website/style.css
@@ -17,6 +17,10 @@ header {
     width: 70%;
 }
 
+.header-contents > * {
+    display: inline-block;  
+}
+
 .header-text span {
     font-size: 40px;
 }
@@ -41,4 +45,49 @@ img {
     width: 80%;
     height: 80%;
     vertical-align: middle;
+}
+
+.body-container {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#cardDisplayContainer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    height: 100px;
+}
+
+.display-card {
+    transform: scale(.8,.8);
+    -ms-transform: scale(.8,.8);
+    -webkit-transform: scale(.8,.8);
+}
+
+.nav-bar-container {
+    float: right;
+}
+
+.nav-bar-container ul {
+    list-style-type: none;
+}
+
+.nav-bar-container li {
+    display: inline-block;
+    background-color: #b8b8b8;
+    margin: 10px;
+    height: 80px;
+    width: 120px;
+}
+
+.nav-bar-container li a {
+    text-decoration: none;
+    line-height: 80px;
+    text-align: center;
+    font-size: 20px;
+    display: block;
+    color: black;
+    height: 100%;
+    width: 100%;
 }
