--- a/web/website/login-styles.css
+++ b/web/website/login-styles.css
@@ -4,3 +4,13 @@
     margin-right: auto;
     margin-top: 20px;
 }
+
+#resultTable {
+    border-collapse: collapse;
+    margin-top: 50px;
+}
+
+#resultTable tr * {
+    border: 1px solid black;
+    padding: 5px;
+}
