--- a/web/website/style.css
+++ b/web/website/style.css
@@ -31,8 +31,13 @@ header {
     vertical-align: middle;
 }
 
-.header-left-container > * {
+.header-left-container div {
     display: inline-block;
+}
+
+.header-left-container a {
+    text-decoration: none;
+    color: black;
 }
 
 .header-image {
@@ -90,4 +95,13 @@ img {
     color: black;
     height: 100%;
     width: 100%;
+}
+
+.title-text {
+    margin-top: 15px;
+}
+
+.title-text span {
+    font-size: 25px;
+    font-weight: bold;
 }
