added database insert queries and continuing work on other functionality

--- a/web/website/saved-cards/saved-card-styles.css
+++ b/web/website/saved-cards/saved-card-styles.css
@@ -45,3 +45,13 @@ table td img {
 .text-visible {
     display: block;
 }
+
+#noCardsContainer {
+    width: 100%;
+    margin-top: 15px;
+    text-align: center;
+}
+
+#noCardsContainer span {
+    color: grey;
+}
