--- a/web/website/decks/deck-styles.css
+++ b/web/website/decks/deck-styles.css
@@ -2,4 +2,50 @@
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 15px;
+}
+
+#newDeckForm > * {
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin: 10px;
+}
+
+#noDecksContainer {
+    width: 100%;
+    margin-top: 50px;
+    text-align: center;
+}
+
+#noDecksContainer span {
+    color: grey;
+}
+
+#newDeckInputsContainer {
+    display: none;
+    opacity: 0%;
+    margin-top: 20px;
+    /* height: 120px; */
+    border: 1px solid black;
+    padding: 10px;
+}
+
+#btnNewDeck {
+    cursor: pointer;
+}
+
+#colorsContainer {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#colorsContainer > div {
+    display: inline-block;
+}
+
+.color-input {
+    width: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
