--- a/web/website/login/login-styles.css
+++ b/web/website/login/login-styles.css
@@ -5,6 +5,39 @@
     margin-top: 20px;
 }
 
+#loginForm {
+    width: 300px;
+    height: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#accountForm {
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+#accountForm input {
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 16px;
+}
+
+.login-input {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.login-input[type="button"] {
+    margin-left: 2px;
+}
+
 #resultTable {
     border-collapse: collapse;
     margin-top: 50px;
@@ -13,4 +46,41 @@
 #resultTable tr * {
     border: 1px solid black;
     padding: 5px;
+}
+
+#formHeader {
+    width: 100%;
+    font-size: 20px;
+}
+
+#accountContainer {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
+
+#formTitle {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+#errorOutput {
+    margin-top: 15px;
+    text-align: center;
+}
+
+#errorOutput span {
+    color: red;
+}
+
+#imageContainer {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#imageContainer img {
+    width: auto;
+    height: 200px;
 }
