--- a/web/website/style.css
+++ b/web/website/style.css
@@ -95,7 +95,7 @@ img {
     background-color: #b8b8b8;
     margin: 10px;
     height: 60px;
-    width: 100px;
+    width: 80px;
     border: 2px solid #b8b8b8;
     border-radius: 6px;
     transition-duration: .4s;
@@ -131,4 +131,16 @@ footer {
     width: 100%;
     /* background-color: #31aa31; */
     height: 50px;
+}
+
+#searchSubmit {
+    display: none;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.float-left {
+    float: left;
 }
