--- a/web/website/search/search-styles.css
+++ b/web/website/search/search-styles.css
@@ -18,11 +18,16 @@
 
 #resultsContainer {
     height: 100%;
+    width: 50%;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .card-result {
     width: 100%;
     height: 210px;
+    margin-bottom: 30px;
 }
 
 .card-result > * {
@@ -46,7 +51,7 @@
     display: grid;
     grid-template:
         "name name cost" 30px
-        "type . set" 30px
+        "type type set" 30px
         "desc desc desc" 120px
         "save . pwrtgh" 30px;
 }
@@ -72,6 +77,21 @@
     grid-area: set;
 }
 
+.card-set > * {
+    float: right;
+}
+
+.card-set i {
+    margin-top: 2px;
+}
+
+.card-set-name {
+    margin-top: 8px;
+    margin-left: 5px;
+    font-size: 18px;
+    line-height: 15px;
+}
+
 .card-desc {
     grid-area: desc;
 }
@@ -84,12 +104,6 @@
     grid-area: pwrtgh;
 }
 
-.img-small {
-    width: 150px;
-    transition-duration: .3s;
-}
-
-.img-big {
-    width: 300px;
-    transition-duration: .3s;
+.card-save button {
+    height: 100%;
 }
